fix(UserMenu): adjust UserButton structure for better readability and maintainability

--- a/app/globals.css
+++ b/app/globals.css
@@ -133,3 +133,7 @@ html {
 .cl-cardBox {
   width: 100%;
 }
+
+.cl-userButton-root {
+  margin: 3px 0 0 0 !important;
+}
